# Project_Rust

./: Cargo.toml
src/: main.rs
static/: dashboard.html  login.html  register.html
static/css/: style.css
